--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
+  "proxy": "http://localhost:3001/",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,8 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.16.3",
-    "mysql": "^2.17.1"
+    "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
+    "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
